--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,10 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for destination in "
+    "    for destination in travel_destinations:\n",
+    "        travel_destinations.title()\n",
+    "\n",
+    "t"
    ]
   },
   {
