--- a/index.ipynb
+++ b/index.ipynb
@@ -217,16 +217,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for destination in travel_destinations:\n",
-    "        travel_destinations.title()\n",
+    "        destination.title()\n",
     "\n",
-    "t"
+    "travel_destinations"
    ]
   },
   {
