--- a/index.ipynb
+++ b/index.ipynb
@@ -234,8 +234,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        destination.title()\n",
+    "        cap\n",
     "\n",
     "travel_destinations"
    ]
