--- a/index.ipynb
+++ b/index.ipynb
@@ -217,18 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-22-f08c8febac1c>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-f08c8febac1c>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    capitalized_countries = []\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
     }
    ],
    "source": [
@@ -236,7 +234,8 @@
     "def capitalize_countries():\n",
     "capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        cap\n",
+    "        capitalized_countries.append(destination.title())\n",
+    "        \n",
     "\n",
     "travel_destinations"
    ]
